name: sprout
version: 0.0.1

category: Language

synopsis: A toy DSL

description: todo

author: Pat Hickey <pat@galois.com>

license: BSD3

build-type: Simple
cabal-version: >= 1.10

library
        build-depends:
                base    >= 4.0 && < 5,
                syb,
                containers,
                mtl,
                vector,
                QuickCheck

        exposed-modules:
                Sprout.Language.Area,
                Sprout.Language.SBool,
                Sprout.Language.Proxy,
                Sprout.Language.Ref,
                Sprout.Language.Type,
                Sprout.Language.Syntax,
                Sprout.Language.Syntax.AST,
                Sprout.Language.Syntax.Type

                -- Sprout.Machine,
                -- Sprout.Machine.Instructions,
                -- Sprout.Machine.Compile,
                -- Sprout.Machine.Simulate,

                -- Sprout.Test.Simple,
                -- Sprout.Test.QuickCheck

        default-language: Haskell2010
        ghc-options: -Wall



